# rgb_controller

./: .gitignore  .gitmodules  README.md  sync.sh
client/: package-lock.json  package.json
config_files/: configB.py  configEmulator.py  configLE.py
controller/: Arduino.h  CMakeLists.txt  arduino_std_definitions.h  controller.cpp  controller.h  controller.hpp  controller.ino  e_bouncing_balls.cpp  e_bouncing_balls.h  e_bouncing_balls.hpp  e_fire.cpp  e_fire.h  e_fire.hpp  e_meteor.cpp  e_meteor.hpp  e_rainbow_shift.cpp  e_rainbow_shift.h  e_rainbow_shift.hpp  e_static_color.cpp  e_static_color.h  e_static_color.hpp  effect.cpp  effect.h  effect.hpp  effect_inclusions.h  input.cpp  input.h  input_analog.cpp  input_analog.h  input_analog.hpp  input_digital.cpp  input_digital.h  input_digital.hpp  light_element.cpp  light_element.h  light_element.hpp  main.cpp  nw_toolkit.cpp  nw_toolkit.h  std_definitions.h
controller/effects/: fire.cpp  fire.h
controller/lib/Adafruit_NeoPixel/: COPYING  keywords.txt
controller/lib/FastLED-3.2.0/: README.md  colorutils.h  keywords.txt  lib8tion.h  library.properties  preview_changes.txt  release_notes.md
controller/lib/FastLED-3.2.0/docs/: Doxyfile
controller/lib/FastLED-3.2.0/extras/: FastLED6502.s65
scripts/: clear.py  connect.sh  rgb-controller-frontend.service  rgb-controller.service
server/: color.py  config.py  config2.py  configLE.py  config_parser.py  controller.py  dummy.py  e_bouncing_balls.py  e_clock.py  e_fire.py  e_interactive_spin.py  e_meteor.py  e_rainbow_shift.py  e_static_color.py  e_thermometer.py  (+5 more)
(+13 files in other folders)
